--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "workshop_jokes"}]
 python = "^3.10"
 fastapi = "^0.94.1"
 uvicorn = "^0.21.1"
+pydantic = "^1.10.6"
 
 
 [build-system]
