--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ python = "^3.10"
 fastapi = "^0.94.1"
 uvicorn = "^0.21.1"
 pydantic = "^1.10.6"
+sqlalchemy = "^2.0.6"
+psycopg2-binary = "^2.9.5"
+alembic = "^1.10.2"
 
 
 [build-system]
